# oficina-pro-whitepaper

./: .gitignore  API_INTEGRATION_GUIDE.md  ARQUITETURA.md  ATUALIZACOES_FINAIS_JAN2026.md  BACKEND_IMPLEMENTATION_REPORT.md  COMPLETO_JANEIRO_2026.md  CONTRIBUTING.md  CONTROLLERS_IMPLEMENTATION_REPORT.md  DESENVOLVIMENTO.md  ESTRUTURA_REPOSITORIO.md  FEATURES.md  FINAL_JANEIRO_2026.md  GUIA_USO.md  IMPLEMENTACOES_JANEIRO_2026.md  INDICE.md  INSTALACAO.md  INSTALLATION_QUICKFIX.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_PROJETO.md  RESUMO_COMPLETO.md  RESUMO_PROJETO.md  ROADMAP.md  SETUP_TAURI.md  STATUS_FINAL.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: SUMMARY.md
backend/: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  IMPLEMENTATION_GUIDE.md  README.md  TROUBLESHOOTING.md  docker-compose.yml  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: app.ts  server.ts
docs/: API_TAURI.md  ARCHITECTURE.md  DATABASE_SCHEMA.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: ClientModal.tsx  ClientsTab.tsx  ConfirmDialog.tsx  FinancialDashboard.tsx  FormInputs.tsx  KanbanBoard.tsx  LedgerModal.tsx  Modal.tsx  PrintableWorkOrder.tsx  ReportsTab.tsx  SearchBar.tsx  SettingsTab.tsx  Table.tsx  Toast.tsx  WorkOrderModal.tsx
src/context/: DatabaseContext.tsx
src/hooks/: useToast.tsx
src/styles/: App.css  ConfirmDialog.css  Dashboard.css  Form.css  KanbanBoard.css  Modal.css  Printable.css  Reports.css  SearchBar.css  Settings.css  (+4 more)
(+46 files in other folders)
