[package]
name = "oficina-pro-erp"
version = "1.0.0"
description = "ERP Oficina PRO - Desktop app for mechanical workshop management"
authors = ["Gabriel Hiraoka <hiraokagabriel@gmail.com>"]
license = "MIT"
repository = "https://github.com/hiraokagabriel/oficina-pro-whitepaper"
default-run = "oficina-pro-erp"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "shell-open", "window-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
